--- a/_src/css/_projects.scss
+++ b/_src/css/_projects.scss
@@ -1,4 +1,4 @@
-.portfolio {
+.projects {
   display: flex;
   align-items: center;
   flex-direction: column;
